update: end-to-end testing

--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -15,7 +15,7 @@
             <nav>
                 <div class="container">
                     <div class="text-center">
-                        <a href="/" class="nav-brand text-dark">User Assessment System</a>
+                        <a href="/" class="nav-brand text-dark">Account Assessment System</a>
                     </div>
                 </div>
             </nav>
